--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,9 +15,9 @@ springdoc.swagger-ui.path=/swagger-ui.html
 spring.jpa.open-in-view=false
 
 #----------Email------------
-#spring.mail.host=smtp.gmail.com
-#spring.mail.port=587
-#spring.mail.username=$$$$$$$$$$$$$$$$$$
-#spring.mail.password=$$$$$$$$$$$$$$$$$$
-#spring.mail.properties.mail.smtp.auth=true
-#spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=$$$$$$$$$$$$$$$$$$
+spring.mail.password=$$$$$$$$$$$$$$$$$$
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
